--- a/tests/manual/Test_Report.html
+++ b/tests/manual/Test_Report.html
@@ -2979,29 +2979,232 @@ summary {
 
 
 <h1 class="title toc-ignore">MSEtool Tests</h1>
-<h4 class="date">07 January, 2021</h4>
+<h4 class="date">01 February, 2021</h4>
 
 </div>
 
 
 <div id="system-and-package-overview" class="section level2">
 <h2>System and Package Overview</h2>
-<p><strong>MSEtool version</strong>: 3.0.0</p>
+<p><strong>MSEtool version</strong>: 3.0.9005</p>
 <p><strong>MSEextra version</strong>: 0.1.0</p>
 <p><strong>System</strong>: Windows</p>
 <p><strong>User</strong>: Adrian</p>
 </div>
 <div id="tests-overview" class="section level2">
 <h2>Tests Overview</h2>
-<div id="htmlwidget-320454f6fec1a5fcf5a1" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-320454f6fec1a5fcf5a1">{"x":{"filter":"none","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16"],["Quick test of pop dyn","Data_Functions","test plot Data","Test Data2csv function","Feasibility Functions","Import Data objects","test MPs with testOM","Test MSE_functions","Test MSE Plotting functions","test OM_functions","OM_init_doc","Test OM Plotting functions","Test PM Functions","test Real indices in Data object","Test of basic population dynamics","slot descriptions"],[1,41,18,1392,62,16,124,8,24,78,9,62,36,9,4,5],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,2,0,0,0,0,0,0,0],[0,1,0,2,0,0,0,0,0,0,0,0,0,0,0,0],[0.95,200.11,82.89,26.24,164.17,7.66,502.2,76.1,15.86,0.2,53.7,965.66,2.77,9.45,2.33,0.01]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Test<\/th>\n      <th>n.tests<\/th>\n      <th>n.skipped<\/th>\n      <th>n.fail<\/th>\n      <th>n.error<\/th>\n      <th>n.time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":100,"columnDefs":[{"className":"dt-right","targets":[2,3,4,5,6]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-a5398b443e4aa570a821" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-a5398b443e4aa570a821">{"x":{"filter":"none","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18"],["Quick test of pop dyn","Test Data conditioning","Data_Functions","test plot Data","Test Data2csv function","Feasibility Functions","Import Data objects","test MPs with testOM","Test MSE_functions","Test MSE Plotting functions","test OM_functions","OM_init_doc","Test OM Plotting functions","Test PM Functions","test Real indices in Data object","Test Dynamic Unfished Ref Points","Test of basic population dynamics","slot descriptions"],[1,16,41,18,22,62,16,124,8,24,78,9,63,36,9,6,4,5],[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0],[0,3,0,0,0,0,16,0,0,2,0,0,1,0,0,0,0,0],[0,0,1,0,11,0,0,0,0,0,0,0,0,0,1,0,0,0],[0.95,13.16,458.62,79.31,8.31,164.66,0.33,500.14,81.94,18.2,0.22,64.58,936.35,3.02,10.09,9.66,2.69,0.01]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Test<\/th>\n      <th>n.tests<\/th>\n      <th>n.skipped<\/th>\n      <th>n.fail<\/th>\n      <th>n.error<\/th>\n      <th>n.time<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":100,"columnDefs":[{"className":"dt-right","targets":[2,3,4,5,6]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 </div>
 <div id="failed-tests" class="section level2">
 <h2>Failed Tests</h2>
-<div id="htmlwidget-ef6315aee63caae8fd0a" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-ef6315aee63caae8fd0a">{"x":{"filter":"none","data":[["1","2"],["Test_MSE_Plotting_functions","Test_MSE_Plotting_functions"],["main_plot_MSE_functions","main_plot_MSE_functions"],["`fun(COSEWICobj)` threw an error. (test-MSE_Plotting.R:23:7)","`fun(MSE)` threw an error. (test-MSE_Plotting.R:28:9)"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>test<\/th>\n      <th>context<\/th>\n      <th>msg<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":100,"order":[],"autoWidth":false,"orderClasses":false,"columnDefs":[{"orderable":false,"targets":0}]}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-9a06ed53c0f2240dde5a" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-9a06ed53c0f2240dde5a">{"x":{"filter":"none","data":[["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22"],["Test_Data_conditioning","Test_Data_conditioning","Test_Data_conditioning","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Import_Data_objects","Test_MSE_Plotting_functions","Test_MSE_Plotting_functions","Test_OM_Plotting_functions"],["_unnamed_","_unnamed_","_unnamed_","new_Data_works_with_Atlantic_mackerel.csv","new_Data_works_with_Atlantic_mackerel.csv","new_Data_works_with_China_rockfish.csv","new_Data_works_with_China_rockfish.csv","new_Data_works_with_Cobia.csv","new_Data_works_with_Cobia.csv","new_Data_works_with_Example_datafile.csv","new_Data_works_with_Example_datafile.csv","new_Data_works_with_Gulf_blue_tilefish.csv","new_Data_works_with_Gulf_blue_tilefish.csv","new_Data_works_with_ourReefFish.csv","new_Data_works_with_ourReefFish.csv","new_Data_works_with_Red_snapper.csv","new_Data_works_with_Red_snapper.csv","new_Data_works_with_Simulation_1.csv","new_Data_works_with_Simulation_1.csv","main_plot_MSE_functions","main_plot_MSE_functions","plot.OM_works_with_all_OMs"],["round(sd(Cerr_y[1:OM@nyears]), 2) not equal to round(sd(Hist@SampPars$Obs$Cerr_y[sim, ]), 2). (test-Data-Conditioning.R:65:1)","round(Hist@SampPars$Obs$Cbias[sim], 1) not equal to round(bias, 1). (test-Data-Conditioning.R:86:1)","Bio[sim, 1:(OM@nyears + OM@proyears - 1)] not equal to MSE@PPD[[1]]@AddInd[sim, sim, ]. (test-Data-Conditioning.R:208:1)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`Data &lt;- new(\"Data\", file.path(path, fl))` threw an error. (test-Import_Data.R:15:5)","`summary(Data, wait = FALSE)` threw an error. (test-Import_Data.R:16:5)","`fun(COSEWICobj)` threw an error. (test-MSE_Plotting.R:23:7)","`fun(MSE)` threw an error. (test-MSE_Plotting.R:28:9)","`plot(obj, silent = TRUE, open = FALSE)` threw an error. (test-OM_Plotting.R:108:5)"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>test<\/th>\n      <th>context<\/th>\n      <th>msg<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"pageLength":100,"order":[],"autoWidth":false,"orderClasses":false,"columnDefs":[{"orderable":false,"targets":0}]}},"evals":[],"jsHooks":[]}</script>
 <pre><code>## ### Traceback
 ## ####  1 
+## round(sd(Cerr_y[1:OM@nyears]), 2) not equal to round(sd(Hist@SampPars$Obs$Cerr_y[sim, ]), 2). 
+## 1/1 mismatches 
+## [1] 0.28 - 0.33 == -0.05 
+## 
+## 
+## ####  2 
+## round(Hist@SampPars$Obs$Cbias[sim], 1) not equal to round(bias, 1). 
+## 1/1 mismatches 
+## [1] 0.9 - 1 == -0.1 
+## 
+## 
+## ####  3 
+## Bio[sim, 1:(OM@nyears + OM@proyears - 1)] not equal to MSE@PPD[[1]]@AddInd[sim, sim, ]. 
+## 49/99 mismatches (average diff: 0.0378) 
+## [51] 13794 - 13794 == 0.00983 
+## [52] 13604 - 13604 == 0.03532 
+## [53] 13450 - 13450 == 0.04364 
+## [54] 13518 - 13518 == 0.05597 
+## [55] 13815 - 13814 == 0.04697 
+## [56] 14090 - 14090 == 0.02572 
+## [57] 13411 - 13411 == 0.02794 
+## [58] 13071 - 13071 == 0.05286 
+## [59] 13454 - 13454 == 0.02904 
+## ... 
+## 
+## 
+## ####  4 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  5 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  6 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: Require `Maximum age` to use Additional Indices 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  7 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  8 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  9 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  10 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  11 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  12 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  13 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  14 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  15 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  16 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  17 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  18 
+## `Data &lt;- new(&quot;Data&quot;, file.path(path, fl))` threw an error. 
+## Message: subscript out of bounds 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-Import_Data.R:15:4 
+##   6. methods::new(&quot;Data&quot;, file.path(path, fl)) 
+##   8. MSEtool:::initialize(value, ...) 
+##   9. MSEtool:::.local(.Object, ...) 
+##  10. MSEtool::XL2Data(stock, ...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/Class_definitions.R:206:4 
+## 
+## 
+## ####  19 
+## `summary(Data, wait = FALSE)` threw an error. 
+## Message: error in evaluating the argument &#39;object&#39; in selecting a method for function &#39;summary&#39;: object &#39;Data&#39; not found 
+## Class:   simpleError/error/condition 
+## Backtrace: 
+##  1. testthat::expect_error(summary(Data, wait = FALSE), NA) test-Import_Data.R:16:4 
+##  7. base::.handleSimpleError(...) 
+##  8. base:::h(simpleError(msg, call)) 
+## 
+## 
+## ####  20 
 ## `fun(COSEWICobj)` threw an error. 
 ## Message: subscript out of bounds 
 ## Class:   simpleError/error/condition 
@@ -3015,7 +3218,7 @@ summary {
 ##  10. grDevices::xy.coords(x, y, setLab = FALSE) 
 ## 
 ## 
-## ####  2 
+## ####  21 
 ## `fun(MSE)` threw an error. 
 ## Message: need finite &#39;ylim&#39; values 
 ## Class:   simpleError/error/condition 
@@ -3025,7 +3228,21 @@ summary {
 ##   6. MSEtool:::fun(MSE) 
 ##   8. graphics::plot.default(x, y, col = &quot;white&quot;, axes = F, ylim = ylimy) 
 ##   9. graphics:::localWindow(xlim, ylim, log, asp, ...) 
-##  10. graphics::plot.window(...)</code></pre>
+##  10. graphics::plot.window(...) 
+## 
+## 
+## ####  22 
+## `plot(obj, silent = TRUE, open = FALSE)` threw an error. 
+## Message: &#39;Len_age&#39; must be array with dimensions: nsim, maxage+1, nyears + proyears.  
+## Should be: 48,9,117; Currently is: 48,8,117 
+## Class:   simpleError/error/condition 
+## Skipjack_IO_IOTC 283 
+## Backtrace: 
+##   1. testthat::expect_error(...) test-OM_Plotting.R:108:4 
+##   8. MSEtool:::plot.OM(obj, silent = TRUE, open = FALSE) 
+##   9. MSEtool:::render_plot(...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/OM_Plotting.R:362:2 
+##  10. MSEtool::Simulate(Object, silent = TRUE, parallel = dopar) C:/Users/Adrian/Documents/GitHub/MSEtool/R/OM_Plotting.R:80:4 
+##  11. MSEtool::SampleStockPars(...) C:/Users/Adrian/Documents/GitHub/MSEtool/R/runMSE.R:62:2</code></pre>
 </div>
 <div id="errors" class="section level2">
 <h2>Errors</h2>
